# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")

assert(is_chromeos, "Telemetry Extension is Chrome OS only")
assert(!is_official_build,
       "Telemetry Extension is only built for unofficial builds")

group("closure_compile") {
  deps = [
    ":trusted_closure_compile",
    ":untrusted_closure_compile",
    ":untrusted_worker_closure_compile",
  ]
}

js_type_check("trusted_closure_compile") {
  deps = [
    ":message_pipe",
    ":message_types",
    ":trusted",
  ]
}

js_type_check("untrusted_closure_compile") {
  deps = [
    ":message_pipe",
    ":message_types",
    ":untrusted",
  ]
}

js_type_check("untrusted_worker_closure_compile") {
  deps = [ ":untrusted_worker" ]
}

js_library("message_pipe") {
}

js_library("message_types") {
  deps = [ "../mojom:mojom_js_library_for_compile" ]
}

js_library("trusted") {
  deps = [ "../mojom:mojom_js_library_for_compile" ]
}

js_library("untrusted") {
}

js_library("untrusted_worker") {
  sources = [ "untrusted_worker.js" ]
}
