# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chrome/test/base/js2gtest.gni")
import("//third_party/closure_compiler/compile_js.gni")

assert(is_chromeos, "Telemetry Extension is Chrome OS only")
assert(!is_official_build,
       "Telemetry Extension is only built for unofficial builds")

js2gtest("browser_tests_js") {
  test_type = "mojo_lite_webui"

  sources = [ "telemetry_extension_ui_browsertest.js" ]

  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

  deps = [
    ":browser_test_support",
    ":trusted_test_requester",
    ":untrusted_browsertest",
    ":untrusted_test_handlers",
  ]
}

source_set("browser_test_support") {
  testonly = true
  sources = [
    "telemetry_extension_ui_browsertest.cc",
    "telemetry_extension_ui_browsertest.h",
  ]

  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

  deps = [
    "../:telemetry_extension_ui",
    "//chrome/test:test_support_ui",
    "//chromeos/components/web_applications/test:test_support",
  ]

  data = [
    "trusted_test_requester.js",
    "untrusted_browsertest.js",
    "untrusted_test_handlers.js",
  ]
}

js_library("trusted_test_requester") {
}

js_library("untrusted_browsertest") {
}

js_library("untrusted_test_handlers") {
}
