# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

android_resources("java_resources") {
  sources = [
    "java/res/drawable-hdpi/infobar_translate_compact.png",
    "java/res/drawable-mdpi/infobar_translate_compact.png",
    "java/res/drawable-xhdpi/infobar_translate_compact.png",
    "java/res/drawable-xxhdpi/infobar_translate_compact.png",
    "java/res/drawable-xxxhdpi/infobar_translate_compact.png",
  ]
  custom_package = "org.chromium.components.translate"
}

static_library("android") {
  sources = [
    "translate_utils.cc",
    "translate_utils.h",
  ]

  deps = [
    "//base",
    "//components/metrics",
    "//components/translate/core/browser",
  ]
}

java_cpp_enum("translate_android_enums") {
  sources = [ "translate_utils.h" ]
}

android_library("translate_android_enums_java") {
  deps = [ "//third_party/android_deps:androidx_annotation_annotation_java" ]

  srcjar_deps = [ ":translate_android_enums" ]
}
