# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//ui/webui/resources/cr_components/chromeos/os_cr_components.gni")
import("//ui/webui/resources/cr_elements/chromeos/os_cr_elements.gni")
import("../settings.gni")

os_settings_namespace_rewrites = settings_namespace_rewrites +
                                 cr_components_chromeos_namespace_rewrites +
                                 cr_elements_chromeos_namespace_rewrites + [
                                   "// #polymer3 |",
                                   "parental_controls.ParentalControlsBrowserProxy|ParentalControlsBrowserProxy",
                                   "settings.AccountManagerBrowserProxy|AccountManagerBrowserProxy",
                                   "settings.AmbientModeBrowserProxy|AmbientModeBrowserProxy",
                                   "settings.ChangePictureBrowserProxy|ChangePictureBrowserProxy",
                                   "settings.DefaultImage|DefaultImage",
                                   "settings.FingerprintAttempt|FingerprintAttempt",
                                   "settings.FingerprintBrowserProxy|FingerprintBrowserProxy",
                                   "settings.FingerprintInfo|FingerprintInfo",
                                   "settings.FingerprintResultType|FingerprintResultType",
                                   "settings.FingerprintScan|FingerprintScan",
                                   "settings.FingerprintSetupStep|FingerprintSetupStep",
                                   "settings.input_method_util.generateOptions|generateOptions",
                                   "settings.input_method_util.getFirstPartyInputMethodEngineId|getFirstPartyInputMethodEngineId",
                                   "settings.input_method_util.getOptionLabelName|getOptionLabelName",
                                   "settings.input_method_util.getOptionMenuItems|getOptionMenuItems",
                                   "settings.input_method_util.getOptionUiType|getOptionUiType",
                                   "settings.input_method_util.getOptionUrl|getOptionUrl",
                                   "settings.input_method_util.hasOptionsPageInSettings|hasOptionsPageInSettings",
                                   "settings.input_method_util.InputToolCode|InputToolCode",
                                   "settings.input_method_util.isNumberValue|isNumberValue",
                                   "settings.input_method_util.OPTION_DEFAULT|OPTION_DEFAULT",
                                   "settings.input_method_util.OptionType|OptionType",
                                   "settings.input_method_util.UiType|UiType",
                                   "settings.KerberosAccount|KerberosAccount",
                                   "settings.KerberosAccountsBrowserProxy|KerberosAccountsBrowserProxy",
                                   "settings.KerberosConfigErrorCode|KerberosConfigErrorCode",
                                   "settings.KerberosErrorType|KerberosErrorType",
                                   "settings.kMenuCloseDelay|kMenuCloseDelay",
                                   "settings.LanguagesMetricsProxy|LanguagesMetricsProxy",
                                   "settings.LanguagesPageInteraction|LanguagesPageInteraction",
                                   "settings.MultiDeviceBrowserProxy|MultiDeviceBrowserProxy",
                                   "settings.MultiDeviceFeature|MultiDeviceFeature",
                                   "settings.MultiDeviceFeatureState|MultiDeviceFeatureState",
                                   "settings.MultiDevicePageContentData|MultiDevicePageContentData",
                                   "settings.MultiDeviceSettingsMode|MultiDeviceSettingsMode",
                                   "settings.OsResetBrowserProxy|OsResetBrowserProxy",
                                   "settings.OsSyncBrowserProxy|OsSyncBrowserProxy",
                                   "settings.OsSyncPrefs|OsSyncPrefs",
                                   "settings.recordLockScreenProgress|recordLockScreenProgress",
                                   "settings.recordSettingChange|recordSettingChange",
                                   "settings.Route|Route",
                                   "settings.RouteObserverBehavior|RouteObserverBehavior",
                                   "settings.Router|Router",
                                   "settings.routes|routes",
                                   "settings.SmartLockSignInEnabledState|SmartLockSignInEnabledState",
                                   "settings.ValidateKerberosConfigResult|ValidateKerberosConfigResult",
                                   "settings.WallpaperBrowserProxy|WallpaperBrowserProxy",
                                 ]

os_settings_auto_imports = settings_auto_imports +
                           cr_components_chromeos_auto_imports +
                           cr_elements_chromeos_auto_imports + [
                             "chrome/browser/resources/settings/chromeos/ambient_mode_page/ambient_mode_browser_proxy.html|AmbientModeBrowserProxy,AmbientModeBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/ambient_mode_page/constants.html|AmbientModeTopicSource,AmbientModeSettings",
                             "chrome/browser/resources/settings/chromeos/deep_linking_behavior.html|DeepLinkingBehavior",
                             "chrome/browser/resources/settings/chromeos/metrics_recorder.html|recordSettingChange",
                             "chrome/browser/resources/settings/chromeos/multidevice_page/multidevice_browser_proxy.html|MultiDeviceBrowserProxy,MultiDeviceBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/multidevice_page/multidevice_constants.html|MultiDeviceSettingsMode,MultiDeviceFeature,MultiDeviceFeatureState,MultiDevicePageContentData,SmartLockSignInEnabledState",
                             "chrome/browser/resources/settings/chromeos/multidevice_page/multidevice_feature_behavior.html|MultiDeviceFeatureBehavior",
                             "chrome/browser/resources/settings/chromeos/multidevice_page/multidevice_browser_proxy.html|MultiDeviceBrowserProxy,MultiDeviceBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/os_languages_page/input_method_util.html|generateOptions,getFirstPartyInputMethodEngineId,getOptionLabelName,getOptionMenuItems,getOptionUiType,getOptionUrl,hasOptionsPageInSettings,InputToolCode,isNumberValue,OPTION_DEFAULT,OptionType,UiType",
                             "chrome/browser/resources/settings/chromeos/os_languages_page/languages_metrics_proxy.html|LanguagesMetricsProxy, LanguagesMetricsProxyImpl, LanguagesPageInteraction",
                             "chrome/browser/resources/settings/chromeos/os_people_page/fingerprint_browser_proxy.html|FingerprintInfo,FingerprintBrowserProxy,FingerprintResultType,FingerprintBrowserProxyImpl,FingerprintAttempt,FingerprintScan",
                             "chrome/browser/resources/settings/chromeos/os_people_page/kerberos_accounts_browser_proxy.html|KerberosAccount,KerberosAccountsBrowserProxyImpl,KerberosAccountsBrowserProxy,KerberosErrorType,KerberosConfigErrorCode,ValidateKerberosConfigResult",
                             "chrome/browser/resources/settings/chromeos/os_people_page/lock_state_behavior.html|LockScreenUnlockType,LockStateBehaviorImpl,LockStateBehavior",
                             "chrome/browser/resources/settings/chromeos/os_people_page/os_sync_browser_proxy.html|OsSyncBrowserProxy,OsSyncBrowserProxyImpl,OsSyncPrefs",
                             "chrome/browser/resources/settings/chromeos/os_page_visibility.html|OSPageVisibility",
                             "chrome/browser/resources/settings/chromeos/os_reset_page/os_reset_browser_proxy.html|OsResetBrowserProxy,OsResetBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/os_route.html|routes",
                             "chrome/browser/resources/settings/chromeos/os_settings_routes.html|OsSettingsRoutes",
                             "chrome/browser/resources/settings/chromeos/personalization_page/change_picture_browser_proxy.html|ChangePictureBrowserProxy,ChangePictureBrowserProxyImpl,DefaultImage",
                             "chrome/browser/resources/settings/chromeos/personalization_page/wallpaper_browser_proxy.html|WallpaperBrowserProxy,WallpaperBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/parental_controls_page/parental_controls_browser_proxy.html|ParentalControlsBrowserProxy,ParentalControlsBrowserProxyImpl",
                             "chrome/browser/resources/settings/chromeos/route_origin_behavior.html|RouteOriginBehaviorImpl,RouteOriginBehavior",
                             "chrome/browser/resources/settings/controls/settings_dropdown_menu.html|DropdownMenuOptionList",
                             "chrome/browser/resources/settings/lifetime_browser_proxy.html|LifetimeBrowserProxy,LifetimeBrowserProxyImpl",
                             "chrome/browser/resources/settings/people_page/account_manager_browser_proxy.html|AccountManagerBrowserProxy,AccountManagerBrowserProxyImpl,Account",
                             "chrome/browser/resources/settings/people_page/profile_info_browser_proxy.html|ProfileInfoBrowserProxyImpl,ProfileInfoBrowserProxy,ProfileInfo",
                             "chrome/browser/resources/settings/people_page/sync_browser_proxy.html|SyncBrowserProxyImpl,SyncBrowserProxy,StatusAction,SyncStatus",
                             "chrome/browser/resources/settings/route.html|routes",
                             "chrome/browser/resources/settings/router.html|Router,Route,RouteObserverBehavior",
                             "ui/webui/resources/html/assert.html|assert,assertNotReached",
                             "ui/webui/resources/html/cr.html|sendWithPromise",
                             "ui/webui/resources/html/icon.html|getImage",
                             "ui/webui/resources/html/polymer.html|afterNextRender,Polymer,html,flush",
                           ]

os_settings_migrated_imports = settings_migrated_imports
