# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/closure_compiler/compile_js.gni")
import("//tools/polymer/polymer.gni")
import("../settings.gni")

js_type_check("closure_compile") {
  deps = [
    ":nearby_share_device_name_dialog",
    ":nearby_share_subpage",
  ]
}

js_library("nearby_share_device_name_dialog") {
  deps = [
    "../prefs",
    "../prefs:prefs_behavior",
    "../prefs:prefs_types",
    "//ui/webui/resources/cr_elements/cr_button:cr_button",
    "//ui/webui/resources/cr_elements/cr_dialog:cr_dialog",
    "//ui/webui/resources/cr_elements/cr_input:cr_input",
    "//ui/webui/resources/js:i18n_behavior",
  ]
}

js_library("nearby_share_subpage") {
  deps = [
    ":nearby_share_device_name_dialog",
    "../prefs",
    "../prefs:prefs_behavior",
    "../prefs:prefs_types",
    "//chrome/browser/resources/nearby_share/shared:nearby_share_settings",
    "//ui/webui/resources/js:cr",
    "//ui/webui/resources/js:i18n_behavior",
  ]
}

group("polymer3_elements") {
  public_deps = [
    ":nearby_share_device_name_dialog_module",
    ":nearby_share_subpage_module",
    "../controls:polymer3_elements",
    "../prefs:polymer3_elements",
  ]
}

js_type_check("closure_compile_module") {
  is_polymer3 = true
  deps = [
    ":nearby_share_device_name_dialog.m",
    ":nearby_share_subpage.m",
  ]
}

js_library("nearby_share_device_name_dialog.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/nearby_share_page/nearby_share_device_name_dialog.m.js" ]
  deps = [
    "../prefs:prefs.m",
    "../prefs:prefs_behavior.m",
    "../prefs:prefs_types.m",
    "//ui/webui/resources/cr_elements/cr_button:cr_button.m",
    "//ui/webui/resources/cr_elements/cr_dialog:cr_dialog.m",
    "//ui/webui/resources/cr_elements/cr_input:cr_input.m",
    "//ui/webui/resources/js:i18n_behavior.m",
  ]
  extra_deps = [ ":nearby_share_device_name_dialog_module" ]
}

js_library("nearby_share_subpage.m") {
  sources = [ "$root_gen_dir/chrome/browser/resources/settings/nearby_share_page/nearby_share_subpage.m.js" ]
  deps = [
    ":nearby_share_device_name_dialog.m",
    "../prefs:prefs.m",
    "../prefs:prefs_behavior.m",
    "../prefs:prefs_types.m",
    "//chrome/browser/resources/nearby_share/shared:nearby_share_settings.m",
    "//ui/webui/resources/js:cr.m",
    "//ui/webui/resources/js:i18n_behavior.m",
  ]
  extra_deps = [ ":nearby_share_subpage_module" ]
}

polymer_modulizer("nearby_share_device_name_dialog") {
  js_file = "nearby_share_device_name_dialog.js"
  html_file = "nearby_share_device_name_dialog.html"
  html_type = "dom-module"
  namespace_rewrites = settings_namespace_rewrites
  auto_imports = settings_auto_imports
}

polymer_modulizer("nearby_share_subpage") {
  js_file = "nearby_share_subpage.js"
  html_file = "nearby_share_subpage.html"
  html_type = "dom-module"
  namespace_rewrites = settings_namespace_rewrites
  auto_imports = settings_auto_imports
}
